Corrected spelling mistake in tag

--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -204,7 +204,7 @@
     state: absent
   tags: 
     - daemon
-    - clean-dameon
+    - clean-daemon
 
 - name: Replace file with original contents
   copy:
