RHV-223: Added task to enable ovirt_celery service after starting it

--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -268,6 +268,10 @@
   command: systemctl start ovirt_celery
   tags: daemon
 
+- name: Enable Celery worker service
+  command: systemctl enable ovirt_celery
+  tags: daemon
+  
 # Proxy service deployment
 
 - name: Stop the existing ImageIO Proxy service
