--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -240,6 +240,36 @@
     recurse: yes
   tags: daemon
 
+
+- name: Create directory to record daemon logs
+  file:
+    path: /var/log/imageio_daemon
+    state: directory
+    owner: vdsm
+    group: kvm
+    recurse: yes
+  tags: daemon
+   
+- name : create directory to record imageio-proxy logs
+  file:
+    path: /var/log/imageio_proxy
+    state: directory
+    owner: vdsm
+    group: kvm
+    recurse: yes
+  tags: proxy
+
+
+- name: Setup logrotate.d scripts
+  template:
+    src: logrotate.d.j2
+    dest: "{{ logrotate_conf_dir }}{{ item.name }}"
+  with_items: "{{ logrotate_scripts }}"
+  when: logrotate_scripts is defined
+  tags:
+    - daemon
+    - proxy
+
 - name: Create directory to record logs
   file:
     path: /var/log/ovirt_celery
@@ -248,6 +278,9 @@
     group: kvm
     recurse: yes
   tags: daemon
+
+
+
 
 - name: Check if Daemon was already configured.
   stat:
