--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -547,12 +547,12 @@
   tags: proxy
   
 - name: Get rhvgui tar file
-  shell: cd /usr/share/ovirt-engine/ui-plugins/ && { curl -k -O https://"{{ virtual_ip }}"/rhvgui.tar.gz ; cd -;}
+  shell: cd /usr/share/ovirt-engine/ui-plugins/ && { curl -k -O https://"{{ virtual_ip }}"/rhvgui.tgz ; cd -;}
   tags: proxy
 
 - name: Untar rhvgui tar file
   unarchive:
-    src: /usr/share/ovirt-engine/ui-plugins/rhvgui.tar.gz
+    src: /usr/share/ovirt-engine/ui-plugins/rhvgui.tgz
     dest: /usr/share/ovirt-engine/ui-plugins
     copy: no
     extra_opts: [--strip-components=1]
