--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -547,21 +547,21 @@
   tags: proxy
   
 - name: Get rhvgui zip file
-  shell: cd /usr/share/ovirt-engine/ui-plugins/ && { curl -k -O https://"{{ virtual_ip }}"/rhvgui.zip ; cd -;}
+  shell: cd /usr/share/ovirt-engine/ui-plugins/ && { curl -k -O https://"{{ virtual_ip }}"/rhvgui-resources ; cd -;}
   tags: proxy
 
-- name: Install unzip
-  yum:
-    name: unzip
-    state: present
-  tags: proxy
+# - name: Install unzip
+#   yum:
+#     name: unzip
+#     state: present
+#   tags: proxy
 
-- name: Untar rhvgui zip file
-  unarchive:
-    src: /usr/share/ovirt-engine/ui-plugins/rhvgui.zip
-    dest: /usr/share/ovirt-engine/ui-plugins
-    remote_src: yes
-  tags: proxy
+# - name: Untar rhvgui zip file
+#   unarchive:
+#     src: /usr/share/ovirt-engine/ui-plugins/rhvgui.zip
+#     dest: /usr/share/ovirt-engine/ui-plugins
+#     remote_src: yes
+#   tags: proxy
   
 
 - name: main | updating rhvgui config file for new react app
@@ -578,8 +578,8 @@
     - daemon
     - proxy
 
-- name: Removing rhvgui zip file
-  file:
-    state: absent
-    path: /usr/share/ovirt-engine/ui-plugins/rhvgui.zip
-  tags: proxy
+# - name: Removing rhvgui zip file
+#   file:
+#     state: absent
+#     path: /usr/share/ovirt-engine/ui-plugins/rhvgui.zip
+#   tags: proxy
